Bug 1326290 - Correct sequencing of layer transaction and StartAsyncScrollbarDrag messages. r=kats

In cases where a mouse click that starts a scrollbar drag is also what
layerizes the scroll frame, the StartAsyncScrollbarDrag message needs to
arrive after the layer transaction. This patch ensures it does.

MozReview-Commit-ID: A02qRb6yWxg

--HG--
extra : rebase_source : 3517e8c8a578a0bd257a80bb8cb81303d171bb6c